--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <a class="top-text" href="#">Foods</a>
         <a class="top-text" href="#">Menu</a>
         <a class="top-text" href="#">About Us</a>
-        <a class="top-text top-button" href="#"><button>Contact Us</button></a>
+        <a class="top-text top-button" href="#"><button class="top-button-tag">Contact Us</button></a>
     </section>
 
 
     <section class="section1">
         <div class="text-header1 half-width">
-            <h1 class="header1">Forget <span class="orange"> Diet,</span> 
+            <h1 class="header1">Forget <span class="blue"> Diet,</span> 
             Get Healthy Food With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
             <a href="#"><button>Order Food</button></a>
@@ -36,14 +36,19 @@
     </section>
 
     <section class="section2">
-        <div class="img-header1 half-width">
-            <img src="food-network-main/images/usable/" alt="" class="img-head2">
+        <div class="img-header2 half-width">
+            <img src="food-network-main/images/usable/img2.png" alt="" class="img-head2">
         </div>
         <div class="text-header2 half-width">
-            <h1 class="header2">About <span class="orange"> Us</span> 
+            <h1 class="header2">About <span class="blue"> Us</span> 
             </h2>
             <p>We completely believe that "Health is wealth". But diet makes us paranoid. So, our company is offering you a great deal. You don't have to even think about diet. We will suggest you meals according to you and deliver healthy and tasty foot at your doorstep.</p>
+            <a href="#"><button>Contact Us</button></a>
         </div>
+        </div>
+    </section>
+    <section class="section3">
+        <h1 class="header2 ">My <span class="blue"> Recipies</span> 
     </section>
 
     
