--- a/index.html
+++ b/index.html
@@ -48,7 +48,39 @@
         </div>
     </section>
     <section class="section3">
-        <h1 class="header2 ">My <span class="blue"> Recipies</span> 
+        <div class="section3-text">
+            <h1 class="header2 ">My <span class="blue"> Recipies</span> 
+            </h1>    
+                <p class="recipies">#Fruits: Apples, bananas, berries, oranges, melons, pears, peaches.</p>
+                <p class="recipies">#Vegetables: Leafy greens, asparagus, broccoli, tomatoes, carrots.</p>
+                <p class="recipies">#Grains: Quinoa, barley, buckwheat, rice, oats.</p>
+                <p class="recipies">#Legumes: Lentils, beans, peas, chickpeas.</p>
+                <p class="recipies">#Nuts: Almonds, walnuts, cashews, chestnuts.</p>
+        </div>
+        <div class="boxes">
+            <div class="box">
+                <div class="img-card-div">
+                    <img src="food-network-main/images/food/Project Cover1.jpg" alt="" class="card-img">
+                </div>
+                <h1>Fruits</h1>
+                <p>Fruits are an excellent source of essential vitamins and minerals, and they are high in fiber. Fruits also provide a wide range of health-boosting antioxidants, including flavonoids.</p>
+            </div>
+            <div class="box">
+                <div class="img-card-div">
+                    <img src="food-network-main/images/food/Project Cover.png" alt="" class="card-img">
+                </div>
+                <h1>Grains</h1>
+                <p>Whole grains are packed with nutrients including protein, fiber, B vitamins, antioxidants, and trace minerals (iron, zinc, copper, and magnesium). A diet rich in whole grains has been shown to reduce the risk of heart disease.</p>
+            </div>
+            <div class="box">
+                <div class="img-card-div">
+                    <img src="food-network-main/images/food/Project Cover8.png" alt="" class="card-img">
+                </div>
+                <h1>Vegetables</h1>
+                
+                <p>A diet rich in vegetables and fruits can lower blood pressure, reduce the risk of heart disease and stroke, prevent some types of cancer, lower risk of eye and digestive problems</p>
+            </div>
+        </div>
     </section>
 
     
