--- a/index.html
+++ b/index.html
@@ -83,6 +83,23 @@
         </div>
     </section>
 
+    <section class="section4">
+        <div class="all-texts-section4">
+            <div class="text-section4">
+                <h1>600K+</h1>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div class="text-section4">
+                <h1>1.2M+</h1>
+                <p>Instagram Follows</p>
+            </div>
+            <div class="text-section4">
+                <h1>200K+</h1>
+                <p>Facebook Likes </p>
+            </div>
+        </div>
+    </section>
+
     
 </body>
 </html>
