--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
         <div class="text-header2 half-width">
             <h1 class="header2">About <span class="blue"> Us</span> 
             </h2>
-            <p>We completely believe that "Health is wealth". But diet makes us paranoid. So, our company is offering you a great deal. You don't have to even think about diet. We will suggest you meals according to you and deliver healthy and tasty foot at your doorstep.</p>
-            <a href="#"><button>Contact Us</button></a>
+            <p>We completely believe that "Health is wealth". But diet makes us paranoid. So, our company is offering you a great deal. You don't have to even think about diet. We will suggest you meals according to you and deliver healthy and tasty foot at your doorstep within minutes.</p>
+            <div class="button-section2">
+                <a class="" href="#"><button>Contact Us</button></a>
+            </div>
         </div>
         </div>
     </section>
@@ -51,11 +53,11 @@
         <div class="section3-text">
             <h1 class="header2 ">My <span class="blue"> Recipies</span> 
             </h1>    
-                <p class="recipies">#Fruits: Apples, bananas, berries, oranges, melons, pears, peaches.</p>
-                <p class="recipies">#Vegetables: Leafy greens, asparagus, broccoli, tomatoes, carrots.</p>
-                <p class="recipies">#Grains: Quinoa, barley, buckwheat, rice, oats.</p>
-                <p class="recipies">#Legumes: Lentils, beans, peas, chickpeas.</p>
-                <p class="recipies">#Nuts: Almonds, walnuts, cashews, chestnuts.</p>
+                <p class="recipies"><b>#</b> Fruits: Apples, bananas, berries, oranges, melons, pears, peaches.</p>
+                <p class="recipies"><b>#</b> Vegetables: Leafy greens, asparagus, broccoli, tomatoes, carrots.</p>
+                <p class="recipies"><b>#</b> Grains: Quinoa, barley, buckwheat, rice, oats.</p>
+                <p class="recipies"><b>#</b> Legumes: Lentils, beans, peas, chickpeas.</p>
+                <p class="recipies"><b>#</b> Nuts: Almonds, walnuts, cashews, chestnuts.</p>
         </div>
         <div class="boxes">
             <div class="box">
@@ -99,6 +101,20 @@
             </div>
         </div>
     </section>
+
+    <section class="section5">
+        <div class="queries">
+            <h3>Let us know your opinion:</h3>
+            <input class="inp-quiery" type="text">
+        </div> 
+    </section>
+
+    <footer>
+        <h2 class="footer-text"><span class="blue">FOOD</span> NETWORK</h2>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+        <p>©2021 Shahir Rahman | Any unautherized use is subject to intellectual theft  </p>
+        <p>Contact: shahir.jojok@gmai.com</p>
+    </footer>
 
     
 </body>
