Edited Some Items

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="icon" href="food-network-main/images/usable/PP try 2.png">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    
 
 </head>
 <body>
@@ -69,7 +71,7 @@
             </div>
             <div class="box">
                 <div class="img-card-div">
-                    <img src="food-network-main/images/food/Project Cover.png" alt="" class="card-img">
+                    <img src="food-network-main/images/food/Project Cover.jpg" alt="" class="card-img">
                 </div>
                 <h1>Grains</h1>
                 <p>Whole grains are packed with nutrients including protein, fiber, B vitamins, antioxidants, and trace minerals (iron, zinc, copper, and magnesium). A diet rich in whole grains has been shown to reduce the risk of heart disease.</p>
@@ -113,7 +115,7 @@
         <h2 class="footer-text"><span class="blue">FOOD</span> NETWORK</h2>
         <p>Eat healthy to live healthy. Live healthy to live happy.</p>
         <p>©2021 Shahir Rahman | Any unautherized use is subject to intellectual theft  </p>
-        <p>Contact: shahir.jojok@gmai.com</p>
+        <p>Contact: shahir.jojok@gmail.com</p>
     </footer>
 
     
