Added and Edited Items

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="boxes">
             <div class="box">
                 <div class="img-card-div">
-                    <img src="food-network-main/images/food/Project Cover1.jpg" alt="" class="card-img">
+                    <img src="food-network-main/images/food/Project Cover7.png" alt="" class="card-img">
                 </div>
                 <h1>Fruits</h1>
                 <p>Fruits are an excellent source of essential vitamins and minerals, and they are high in fiber. Fruits also provide a wide range of health-boosting antioxidants, including flavonoids.</p>
