Section-addition Added and edited

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1 class="header1">Forget <span class="blue"> Diet,</span> 
             Get Healthy Food With Food Network</h1>
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
-            <a href="#"><button>Order Food</button></a>
+            <a class="section1-button" href="#"><button>Order Food</button></a>
         </div>
         <div class="img-header1 half-width">
             <img src="food-network-main/images/usable/img1.png" alt="" class="img-head1">
@@ -44,9 +44,9 @@
         <div class="text-header2 half-width">
             <h1 class="header2">About <span class="blue"> Us</span> 
             </h2>
-            <p>We completely believe that "Health is wealth". But diet makes us paranoid. So, our company is offering you a great deal. You don't have to even think about diet. We will suggest you meals according to you and deliver healthy and tasty foot at your doorstep within minutes.</p>
+            <p>We completely believe that "Health is wealth". But diet makes people paranoid. So, our company is offering you a great deal. You don't have to even think about diet. We will suggest you meals according to you and deliver healthy and tasty food at your doorstep within minutes <strong>24/7</strong>.</p>
             <div class="button-section2">
-                <a class="" href="#"><button>Contact Us</button></a>
+                <a class="" href="#"><button>Reach Us</button></a>
             </div>
         </div>
         </div>
@@ -100,6 +100,28 @@
             <div class="text-section4">
                 <h1>200K+</h1>
                 <p>Facebook Likes </p>
+            </div>
+        </div>
+    </section>
+
+    <h2 class="testimony-h2">Testimonies</h2>
+    <section class="section-added">
+        
+        <div class="section-added-reviews">
+            <div class="card-testimony border-right">
+                <h1>Farhan Ahmad</h1>
+                <p class="stars">★★★★★</p>
+                <p>We had lunch here a few times while on the island visiting family and friends.</p>
+            </div>
+            <div class="card-testimony border-right">
+                <h1>Jamil Akhtar</h1>
+                <p class="stars">★★★★</p>
+                <p>I had dinner with some of my colleagues at Echo on Day 1. I had the wedge salad - it was delicious.</p>
+            </div>
+            <div class="card-testimony">
+                <h1>Ross Geller</h1>
+                <p class="stars">★★★★★</p>
+                <p>The food was absolutely wonderful, from preparation to presentation, very pleasing.</p>
             </div>
         </div>
     </section>
