--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
             <div class="card-testimony border-right">
                 <h1>Farhan Ahmad</h1>
                 <p class="stars">★★★★★</p>
-                <p>We had lunch here a few times while on the island visiting family and friends.</p>
+                <p>When I think lunch, I think Food Network. My healthy dining solution across the country.</p>
             </div>
             <div class="card-testimony border-right">
                 <h1>Jamil Akhtar</h1>
                 <p class="stars">★★★★</p>
-                <p>I had dinner with some of my colleagues at Echo on Day 1. I had the wedge salad - it was delicious.</p>
+                <p>I had dinner with some of my colleagues on the weekend. I had the wedge salad - it was delicious.</p>
             </div>
             <div class="card-testimony">
                 <h1>Ross Geller</h1>
                 <p class="stars">★★★★★</p>
-                <p>The food was absolutely wonderful, from preparation to presentation, very pleasing.</p>
+                <p>Absolutely wonderful! From preparation to presentation, very pleasing. An amazing experience in Bangladesh</p>
             </div>
         </div>
     </section>
